Tg 5 user can vote (#3)
* swagger models

* temp

* swagger changes

* swagger changes

* schema changes

* change schema

* generate swagger

* add now as an argument

* fix errors

* fix errors 2

* move polls to pages

* rename const

* proto in progress

* proto

* update message in progress

* process 2 errors

* handlers in progress

* handlers in progress

* callback handlers

* small fixes

* small fixes

* small fixes2

* small fixes3

* voted option

* voting in progress

* back to poll in progress

* marshall calback data

* stub for main page

* linter fixes and middlewares

* fix not found test

* process -> switcher

* fix happy path test

* votepreview

* generic adventure in progress

* workaround to satisfy generic signature

* fix message nil pointer

* edit message instead of new message

* fix voting

* switcher refac

* try to address minutes

* test in progress

* test in progress2

* test in progress3

* seriall running packages

* fix make test

* refac vote test

* refac tests2

* back to main assert

* fix linter
