# internal/models/swagger/create_vote.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package swagger
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// CreateVote create vote
+//
+// swagger:model CreateVote
+type CreateVote struct {
+
+	// option ID
+	OptionID int16 `json:"OptionID,omitempty"`
+
+	// poll ID
+	PollID int32 `json:"PollID,omitempty"`
+
+	// user ID
+	UserID int64 `json:"UserID,omitempty"`
+}
+
+// Validate validates this create vote
+func (m *CreateVote) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this create vote based on context it is used
+func (m *CreateVote) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *CreateVote) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *CreateVote) UnmarshalBinary(b []byte) error {
+	var res CreateVote
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
