# internal/models/swagger/vote.go
@@ -1,0 +1,59 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package swagger
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// Vote vote
+//
+// swagger:model Vote
+type Vote struct {
+
+	// epoch unix timestamp
+	EpochUnixTimestamp int64 `json:"EpochUnixTimestamp,omitempty"`
+
+	// option ID
+	OptionID int16 `json:"OptionID,omitempty"`
+
+	// poll ID
+	PollID int32 `json:"PollID,omitempty"`
+
+	// user ID
+	UserID int64 `json:"UserID,omitempty"`
+}
+
+// Validate validates this vote
+func (m *Vote) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this vote based on context it is used
+func (m *Vote) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Vote) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Vote) UnmarshalBinary(b []byte) error {
+	var res Vote
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
